Refactor(service): restructure layer with command pattern, Refactor(JsonDataRepository): a new atomic repository with a snapshot updates based system (keeping the purest form of immutability), (not finished)